fix: fixed scrollbar for fancy new cursor

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,7 @@ html, body {
   --border-radius: 12px;
 
   color-scheme: dark;
+  overflow: hidden;
 
   margin: 0;
   height: 100%;
